# arima_project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES.md  CHANGELOG.md  CLAUDE.md  DASHBOARD_EVOLUTION_COMPLETE.md  DOCKER_README.md  DYNAMIC_PRICING_VMI_IMPLEMENTATION_GUIDE.md  Dockerfile  Makefile  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PROPHET_API_INTEGRATION_SUMMARY.md  PROPHET_INTEGRATION_STATUS.md  README.md  README_UV.md  Step.md  arima_example_notebook.ipynb  da SalesForce.md  debug_quarto.py  debug_reporting.py  docker-compose.yml  justfile  pyproject.toml  requirements.txt  setup.py  sincro_code.txt  test_complete_workflow.py  test_dashboard_report.py  test_dashboard_simple.py  test_dashboard_translations.py  test_imports.py  test_plotter_multilang.py  test_prophet_api.py  test_report_format.py  test_reporting.py  test_reporting_simple.py
.claude/: settings.local.json
analysis/: competitive_benchmarks.md
arima_model/: evaluation.py  model.py  preprocessing.py
dash_a/: README.md  angular.json  package-lock.json  package.json
dash_a/src/: index.html  styles-fixes.scss  styles.scss
dash_a/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts
dash_a/src/environments/: environment.ts
docs/: API_INTERMITTENT_DEMAND.md  AUTOML_GUIDE.md  BATCH_PROCESSING_GUIDE.md  GPU_SETUP.md  INTERMITTENT_BEST_PRACTICES.md  INTERMITTENT_DEMAND_GUIDE.md  PROPHET_API_ENDPOINTS.md  Quick Start.md  advanced_inventory_features.md  api_reference.md  arima_vs_sarima.md  balance_optimizer.md  cold_start_guide.md  confronto_modelli_arima.md  guida_prophet.md  guida_reporting.md  guida_utente.md  inventory_quickstart.md  kafka_streaming_guide.md  msl_api_documentation.md  prophet_vs_arima.md  prophet_vs_arima_sarima.md  sarima_vs_sarimax.md  slow_fast_moving_theory.md  teoria_arima.md  teoria_prophet.md  teoria_sarima.md  teoria_sarimax.md
docs/demand_sensing/: README.md  technical_guide.md
examples/: advanced_features_demo.py  advanced_forecasting_showcase.py  automl_quickstart.py  automl_showcase.py  batch_forecasting_poc.py  dashboard_evolution_demo.py  dashboard_evolution_demo_ascii.py  final_integration_test.py  financial_time_series.py  forecasting_base.py  intermittent_quickstart.py  iot_sensor_forecasting.py  manufacturing_forecasting.py  minimum_shelf_life_demo.py  mlops_demo.py  mlops_demo_simple.py  moretti_reconciliation_example.py  prophet_auto_selection_demo.py  quarto_reporting.py  reconciliation_example.py  retail_sales_forecasting.py  retail_sales_forecasting_windows.py  sarimax_example.py  selezione_automatica.py  simple_reconciliation_test.py  slow_fast_moving_demo.py  test_mlops_final.py  user_engagement_forecasting.py  utils.py  web_traffic_forecasting.py
examples/demand_sensing/: basic_example.py  food_delivery_example.py  retail_fashion_example.py
examples/moretti/: AGGIORNAMENTO_DOCUMENTAZIONE_CSV.md  ALERT_CONTRAST_FIX.md  DEMO_SCRIPT.md  FINAL_CONTRAST_FIX.md  ORDINI_CONTRAST_FIX.md  PRESENTATION_EXECUTIVE_SUMMARY.md  PRESENTATION_SLIDES.md  PRESENTATION_TECHNICAL_GUIDE.md  README.md  README_CSV_INTEGRATION.md  generate_vendite_storiche.py  moretti_advanced_forecasting.py  moretti_cold_start_example.py  moretti_cold_start_simple.py  moretti_dashboard.py  moretti_dashboard_advanced_section.py  moretti_dashboard_demo.py  moretti_dynamic_pricing_vmi_demo.py  moretti_intermittent_spare_parts.py  moretti_inventory_fast.py  moretti_inventory_management.py  moretti_simple_example.py  run_demo.py  test_advanced_exog_handling.py  test_alert_style.py  test_moretti_minimal.py
examples/moretti/data/: README_STRUTTURA_CSV.md
fe_angular/: README.md  package.json
fe_angular/moretti-dashboard/: README.md  angular.json  package-lock.json  package.json
fe_angular/moretti-dashboard/src/: index.html  main.ts
fe_angular_2/: README.md  angular.json  package-lock.json  package.json
fe_angular_2/src/: index.html  styles.scss
fe_angular_2/src/app/: app.html  app.routes.ts  app.spec.ts  app.ts
frontend/: IMPLEMENTATION_AUTO_TRAINING.md  README.md  package-lock.json
frontend/src/: styles.scss
frontend/src/app/: app.html  app.routes.ts  app.ts
models/: registry.json
notebooks/: research_and_development.html  research_and_development.ipynb
scripts/: demo_new_features.py  demo_new_features_ascii.py  fix_qmd_strings.py  forecast.py  run_api.py  run_batch_dashboard.py  run_dashboard.py  run_enhanced_dashboard.py  setup_uv.py  test_health_endpoints.py  train.py
src/arima_forecaster/: __init__.py  cli.py
src/arima_forecaster/api/: Guida.md  README.md  __init__.py  examples.py  main.py  middleware.py  models.py  models_extra.py  services.py
src/arima_forecaster/automl/: __init__.py  auto_selector.py  batch_processor.py  optimizer.py  tuner.py
src/arima_forecaster/config/: __init__.py  gpu_config.py  settings.py
src/arima_forecaster/core/: __init__.py  arima_model.py  cold_start.py  gpu_model_selector.py  intermittent_model.py  model_selection.py  prophet_model.py  (+7 more)
tests/: __init__.py  conftest.py  test_arima_model.py  test_cli.py  test_demand_sensing.py  test_enhanced_dashboard.py  test_explainability.py  test_forecast.py  test_health_monitoring.py  test_inventory.py  test_mlops_integration.py  test_mlops_simple.py  test_model.py  test_preprocessing.py  test_reconciliation.py  test_reporting.py  test_sarimax_model.py  test_streaming.py
tests/api/: README.md  __init__.py  conftest.py  pytest.ini  test_api_comprehensive.py  test_diagnostics_router.py  test_forecasting_router.py  test_health_router.py  test_integration_e2e.py  test_models_router.py  test_reports_router.py  test_training_router.py
tests/gpu/: benchmark_advanced.py  check_gpu.py  gpu_vs_cpu.py
(+172 files in other folders)
